logs/dag_id=tune_stream_dag/run_id=manual__2025-07-22T101636.898393+0000/task_id=Load_songplays_fact_table/attempt=3.log
[2025-07-24T13:47:47.045+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table manual__2025-07-22T10:16:36.898393+00:00 [queued]>
[2025-07-24T13:47:47.062+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: tune_stream_dag.Load_songplays_fact_table manual__2025-07-22T10:16:36.898393+00:00 [queued]>
[2025-07-24T13:47:47.064+0000] {taskinstance.py:2170} INFO - Starting attempt 3 of 4
[2025-07-24T13:47:47.084+0000] {taskinstance.py:2191} INFO - Executing <Task(PythonOperator): Load_songplays_fact_table> on 2025-07-22 10:16:36.898393+00:00
[2025-07-24T13:47:47.093+0000] {standard_task_runner.py:60} INFO - Started process 259 to run task
[2025-07-24T13:47:47.097+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'tune_stream_dag', 'Load_songplays_fact_table', 'manual__2025-07-22T10:16:36.898393+00:00', '--job-id', '328', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline.py', '--cfg-path', '/tmp/tmpen61m14u']
[2025-07-24T13:47:47.101+0000] {standard_task_runner.py:88} INFO - Job 328: Subtask Load_songplays_fact_table
[2025-07-24T13:47:47.173+0000] {task_command.py:423} INFO - Running <TaskInstance: tune_stream_dag.Load_songplays_fact_table manual__2025-07-22T10:16:36.898393+00:00 [running]> on host a4bcda7cb679
[2025-07-24T13:47:47.237+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='genz-legend' AIRFLOW_CTX_DAG_ID='tune_stream_dag' AIRFLOW_CTX_TASK_ID='Load_songplays_fact_table' AIRFLOW_CTX_EXECUTION_DATE='2025-07-22T10:16:36.898393+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2025-07-22T10:16:36.898393+00:00'
[2025-07-24T13:47:47.242+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 199, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/python.py", line 216, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/etl_pipeline.py", line 168, in <lambda>
    python_callable=lambda: load_table(SqlQueries.songplay_table_insert),
  File "/opt/airflow/dags/etl_pipeline.py", line 127, in load_table
    cur.execute(f"DELETE FROM {query.split()[3]}")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^

[2025-07-24T13:47:47.252+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=tune_stream_dag, task_id=Load_songplays_fact_table, execution_date=20250722T101636, start_date=20250724T134747, end_date=20250724T134747
[2025-07-24T13:47:47.265+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 328 for task Load_songplays_fact_table (syntax error at or near ")"
LINE 1: DELETE FROM events.start_time)
                                     ^
; 259)
[2025-07-24T13:47:47.310+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2025-07-24T13:47:47.332+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
